Continued work on the trainThread