@@ -1,5 +1,6 @@
 package Trains;
 
+import Main.Main;
 import Tiles.Tile;
 import Tiles.TrainPassable;
 import Tiles.TrainTrack;
@@ -7,11 +8,10 @@ import Trains.Carriages.Carriage;
 import Trains.Locomotives.Locomotive;
 import Util.Coordinates;
 import Util.RailroadStation;
+import javafx.application.Platform;
 
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.LinkedList;
-import java.util.Map;
+import java.util.*;
+import java.util.logging.Level;
 
 public class Train implements Runnable
 {
@@ -23,36 +23,42 @@ public class Train implements Runnable
     TrainState currentState;
     Tile[][] map;
     LinkedList<RailroadStation> stations;
+    boolean trainAlive;
+    int trainPartsWhichHaveLeftThePlatform;
 
     public Train(LinkedList<Connectable> trainPieces, double trainSpeed, String route, Tile[][] map, LinkedList<RailroadStation> stations)
     {
+        trainAlive = true;
         parts = trainPieces;
         this.trainSpeed = trainSpeed;
         this.route = route;
         currentState = TrainState.Parked;
         positionOnRoute = 0;
         this.stations = stations;
+        trainPartsWhichHaveLeftThePlatform = 0;
+        this.map = map;
 
         for(var x : stations) //initialize first station
         {
-            if(x.getName()==(route.charAt(0)+""))
+            if(x.getName().equals(route.charAt(0)+""))
             {
                 currentStation=x;
+                x.addTrainToQueue(this);
                 break;
 
             }
         }
     }
 
-    private LinkedList<TrainTrack> getAdjacentTracks()
+    private List<TrainTrack> getAdjacentTracks()
     {
         LinkedList<TrainTrack> adjacentTracks = new LinkedList<>();
         Locomotive trainHead = (Locomotive) parts.get(0); //first part of the train must be a locomotive
-        if (currentState==TrainState.Parked) //if the train is parked, its adjacent tracks are the stations exitTracks
+        if (currentState==TrainState.Parked || this.trainPartsWhichHaveLeftThePlatform==0) //if the train is parked, its adjacent tracks are the stations exitTracks
             return currentStation.getPossibleExitCoordinates();
         else
             if(map[trainHead.getxCoordinate() + 1 ][trainHead.getyCoordinate()] instanceof TrainPassable)
-                adjacentTracks.add((TrainTrack)map[trainHead.getxCoordinate() + 1 ][trainHead.getyCoordinate()]);
+                adjacentTracks.add((TrainTrack) map[trainHead.getxCoordinate() + 1 ][trainHead.getyCoordinate()]);
             if(map[trainHead.getxCoordinate()][trainHead.getyCoordinate() + 1] instanceof TrainPassable)
                 adjacentTracks.add((TrainTrack)map[trainHead.getxCoordinate()][trainHead.getyCoordinate() + 1]);
             if(map[trainHead.getxCoordinate() - 1][trainHead.getyCoordinate()] instanceof TrainPassable)
@@ -72,28 +78,123 @@ public class Train implements Runnable
     @Override
     public void run()
     {
-        switch (currentState)
+        while(trainAlive)
         {
-            case Parked ->
+            switch (currentState)
+            {
+                case Parked ->
+                {
+                    if (currentStation.nextInQueue(this) && currentStation.greenLight())
                     {
-
-                    }
-            case Normal ->
-                    {
-                        synchronized (map)
+                        try
                         {
-                            if(currentStation.nextInQueue(this) && currentStation.greenLight())
-                            {
-                                move();
-                            }
-
+                            Thread.sleep((long)trainSpeed*1000);
+                            this.currentState=TrainState.ExitingParking;
+                        }
+                        catch (Exception ex)
+                        {
+                            Main.logger.log(Level.SEVERE,ex.getMessage(),ex);
                         }
                     }
-            case ExitingParking ->
-                    {
 
+                }
+                case Normal -> {
+                    synchronized (Train.class)
+                    {
+                            try
+                            {
+                                Thread.sleep(((long)trainSpeed*1000));
+                                move();
+                            } catch (Exception ex)
+                            {
+                                Main.logger.log(Level.SEVERE,ex.getMessage(),ex);
+                            }
                     }
+                }
+                case ExitingParking ->
+                {
+                    synchronized (Train.class)
+                    {
+                        try
+                        {
+                            Thread.sleep((long)trainSpeed*1000);
+                            exitParking();
+                        }
+                        catch (Exception ex)
+                        {
+                            Main.logger.log(Level.SEVERE, ex.getMessage(), ex);
+                        }
+                    }
+
+                }
+            }
         }
+    }
+    private synchronized void exitParking()
+    {
+        int newX, newY;
+        Locomotive trainHead = (Locomotive) parts.get(0);
+        RailroadStation nextStation = null;
+        for (var x: stations)
+        {
+            if (x.getName().equals(nextStationName() + ""))
+            {
+                nextStation = x;
+                break;
+            }
+        }
+
+        HashMap<Integer,Tile> tileDistanceMap = new HashMap<>();
+        for (var track : getAdjacentTracks())
+        {
+            int distance = Coordinates.calculateDistance(
+                    new Coordinates(track.getxCoordinate(),track.getyCoordinate()),
+                    new Coordinates(nextStation.getxCoordinate(), nextStation.getyCoordinate()));
+            tileDistanceMap.put(distance,track);
+        }
+        var nextTileValueEntry = Collections.min(tileDistanceMap.entrySet(), Map.Entry.comparingByKey());
+        var nextTile = nextTileValueEntry.getValue();
+        newX = nextTile.getxCoordinate(); newY = nextTile.getyCoordinate();
+
+        if(trainPartsWhichHaveLeftThePlatform==0)
+        {
+            var front = parts.getFirst();
+            front.setxCoordinate(newX); front.setyCoordinate(newY);
+            Platform.runLater(() -> map[front.getxCoordinate()][front.getyCoordinate()].putContent(front.toString()));
+            trainPartsWhichHaveLeftThePlatform++;
+        }
+
+        else
+        {
+            for (int i = 0; i < trainPartsWhichHaveLeftThePlatform; i--)
+            {
+
+                var front = parts.get(trainPartsWhichHaveLeftThePlatform - i - 1);
+                var rear = parts.get(trainPartsWhichHaveLeftThePlatform -i);
+
+
+                //clear the rear tile
+                Platform.runLater(() -> map[rear.getxCoordinate()][rear.getyCoordinate()].putContent(""));
+
+                //set taken to false;
+
+                rear.setxCoordinate(front.getxCoordinate());
+                rear.setyCoordinate(front.getyCoordinate());
+
+                front.setxCoordinate(newX);
+                front.setyCoordinate(newY);
+                Platform.runLater(() -> map[front.getxCoordinate()][front.getyCoordinate()].putContent(front.toString()));
+                Platform.runLater(() -> map[rear.getxCoordinate()][rear.getyCoordinate()].putContent(rear.toString()));
+                trainPartsWhichHaveLeftThePlatform++;
+                if(trainPartsWhichHaveLeftThePlatform==parts.size())
+                {
+                    currentState = TrainState.Normal;
+                    break;
+                }
+
+            }
+        }
+
 
     }
     private synchronized void move()
@@ -103,9 +204,11 @@ public class Train implements Runnable
         RailroadStation nextStation = null;
         for (var x: stations)
         {
-            if (x.getName()==nextStationName()+"")
+            if (x.getName().equals(nextStationName()+""))
+            {
                 nextStation = x;
-            break;
+                break;
+            }
         }
 
         HashMap<Integer,Tile> tileDistanceMap = new HashMap<>();
@@ -121,23 +224,24 @@ public class Train implements Runnable
         newX = nextTile.getxCoordinate(); newY = nextTile.getyCoordinate();
 
 
-        for(int i = parts.size();i>0;i--)
+        for(int i = parts.size();i>1;i--)
         {
             var rear = parts.get(i-1);
             var front = parts.get(i-2);
 
             //clear the rear tile
-            map[rear.getxCoordinate()][rear.getyCoordinate()].putContent("");
-
+            Platform.runLater(() ->
+                    {
+                        map[rear.getxCoordinate()][rear.getyCoordinate()].putContent("");
+                        map[front.getxCoordinate()][front.getyCoordinate()].putContent("");
+                    });
             rear.setxCoordinate(front.getxCoordinate());
             rear.setyCoordinate(front.getyCoordinate());
-            map[rear.getxCoordinate()][rear.getyCoordinate()].putContent(rear.toString());
-
+            Platform.runLater(() -> map[rear.getxCoordinate()][rear.getyCoordinate()].putContent(rear.toString()));
         }
         //move the train leading part to new coordinates
-        var front = parts.getFirst();
+        var front = parts.get(0);
         front.setxCoordinate(newX); front.setyCoordinate(newY);
-        map[front.getxCoordinate()][front.getyCoordinate()].putContent(front.toString());
-
+        Platform.runLater(() -> map[front.getxCoordinate()][front.getyCoordinate()].putContent(front.toString()));
     }
 }
